# fileshimstem

./: .dependabotbot.json  .gitignore  README.md  SECURITY.MD  config.json.example.osx  config.json.example.windows  fileshimstem.json.example.osx  fileshimstem.json.example.windows  fileshimstem.py  pyproject.toml  requirements.txt  test_fileshimstem.py
.github/: dependabot.yml
.github/workflows/: mypy.yml  pylint.yml  pytest.yml  ruff.yml  testing.yml  ty.yml
fileshimstem/: __init__.py  __main__.py
tests/: test_fileshimstem.py
