[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fileshimstem"
version = "0.1.6"
description = "A shim between the filesystem and ... the internet. Probably a bad idea."
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

keywords = [
    "terrible"
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24"}
GitPython = "^3.1.29"

[tool.poetry.dev-dependencies]
pylint = "^3.0.1"
pytest = "^7.2.0"
black = "^23.1.0"
mypy = "^1.0"
requests = "^2.28.1"
pylint-pydantic = "^0.3.0"
httpx = "^0.25.0"


[project.scripts]
fileshimstem = "fileshimstem.__main__:run"

[tool.poetry.scripts]
fileshimstem = "fileshimstem.__main__:run"

[tool.pylint.MASTER]
disable="W0511"
max-line-length=200
extension-pkg-whitelist="pydantic"
load-plugins="pylint_pydantic"