[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "fileshimstem"
version = "0.1.6"
description = "A shim between the filesystem and ... the internet. Probably a bad idea."
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = [
    { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
]
keywords = ["terrible"]
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34,<1.0.0",
    "GitPython>=3.1.29,<4.0.0",
]

[project.scripts]
fileshimstem = "fileshimstem.__main__:run"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.15.8,<1.0.0",
    "ty>=0.0.26,<1.0.0",
    "mypy>=1.0,<2.0",
    "requests>=2.28.1,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fileshimstem"]

[tool.ruff]
line-length = 200
