[project]
name = "fileshimstem"
version = "0.1.6"
description = "A shim between the filesystem and ... the internet. Probably a bad idea."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
keywords = ["terrible"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.46.0",
    "GitPython>=3.1.50",
]

[project.scripts]
fileshimstem = "fileshimstem.__main__:run"

[dependency-groups]
dev = [
    "pytest>=9.0.3", #stopping toml rollup
    "ruff>=0.15.12",
    "ty>=0.0.35",
    "httpx>=0.28.1",
]
[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 200
